--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -7,6 +7,7 @@
     <title>Connection CMGMMO</title>
     <link rel="stylesheet" href="../../styles.css">
     <link rel="icon" href="./cmg.png">
+    <script src="../../script.js"></script>
     <style>
         body {
             background-color: #333232;
