--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -48,10 +48,24 @@
             margin: 10px 0;
         }
 
+        @keyframes pop {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.1);
+            }
+        }
+
         #playerCount {
             color: #189618;
             font-weight: bold;
+            animation: pop 1s infinite;
         }
+
 
         #yellow {
             color: #ffee6f;
@@ -141,58 +155,58 @@
     </style>
     <script>
         function fetchPlayerCount() {
-            var playerCountElement = document.getElementById('playerCount');
-            setTimeout(() => {
-                playerCountElement.textContent = "Loading.";
-            }, 200)
-            setTimeout(() => {
-                playerCountElement.textContent = "Loading..";
-            }, 478)
-            setTimeout(() => {
-                playerCountElement.textContent = "Loading...";
-            }, 800)
-            setTimeout(() => {
-                var apiUrl = "https://api.mcsrvstat.us/bedrock/3/cmgmmo.mc.in.th:21356";
+            const playerCountElement = document.getElementById('playerCount');
 
-                fetch(apiUrl)
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.players) {
-                            var onlinePlayers = data.players.online;
-                            /**
-                             * Didn't Usage (max player)
-                             * var maxPlayers = data.players.max;
-                             * 
-                             * to display "onlinePlayers + '/' + maxPlayers"
-                            */
-                            playerCountElement.textContent = onlinePlayers;
+            const displayPlayerCountWithDelay = (count, delay) => {
+                setTimeout(() => {
+                    playerCountElement.textContent = count;
+                }, delay);
+            };
+
+            const apiUrl = "https://api.mcsrvstat.us/bedrock/3/cmgmmo.mc.in.th:21356";
+
+            fetch(apiUrl)
+                .then(response => response.json())
+                .then(data => {
+                    if (data.players) {
+                        const onlinePlayers = data.players.online;
+
+                        displayPlayerCountWithDelay("L0ADIN", 100);
+                        displayPlayerCountWithDelay("L0ADI", 256);
+                        displayPlayerCountWithDelay("L0AD", 425);
+                        displayPlayerCountWithDelay("L0A", 674);
+                        displayPlayerCountWithDelay("L0", 850);
+                        displayPlayerCountWithDelay("0", 1000);
+                        for (let i = 0; i < onlinePlayers + 1; i++) {
+                            displayPlayerCountWithDelay(i, 1235 + i * 200);
                         }
-                    })
-                    .catch(error => {
-                        console.error('Error fetching player count:', error);
-                    });
-            }, 900)
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching player count:', error);
+                });
         }
+
         window.addEventListener('load', fetchPlayerCount);
 
         function openMinecraft() {
-            var userAgent = navigator.userAgent.toLowerCase();
-            var isIOS = /iphone|ipad|ipod/.test(userAgent);
+            const userAgent = navigator.userAgent.toLowerCase();
+            const isIOS = /iphone|ipad|ipod/.test(userAgent);
 
-            var instructions = document.getElementById('instructions');
-            var button = document.getElementById('connect-button');
+            const instructions = document.getElementById('instructions');
+            const button = document.getElementById('connect-button');
 
             if (isIOS) {
                 instructions.innerHTML = `
-                <p>Sorry, now you are using iOS so I can't add the server automatically.
-                Please add the server manually.</p>
-                `;
+            <p>Sorry, now you are using iOS so I can't add the server automatically.
+            Please add the server manually.</p>
+        `;
             } else {
                 window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO|cmgmmo.mc.in.th:21356';
                 instructions.innerHTML = `
-                    <p>Look like you didn't teleport to Minecraft?</p>
-                    <p>Please add the server manually.</p>
-                `;
+            <p>Look like you didn't teleport to Minecraft?</p>
+            <p>Please add the server manually.</p>
+        `;
             }
             instructions.classList.add('fade-in');
             button.classList.add('rotate');
@@ -206,7 +220,7 @@
             <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
             <h2>@CMGMMO!</h2>
             <p>This is a page to add the Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
-            <p>Now Player(s) Online: <span id="playerCount">Loading</span>/30</p>
+            <p>Now Player(s) Online: <span id="playerCount">L0ADING</span>/30</p>
             <br>
             <button id="connect-button" onclick="openMinecraft()">Add Server</button>
             <button id="cmgmmodis">Join Discord</button>
