--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -219,7 +219,7 @@
             <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
             <h2>@CMGMMO!</h2>
             <p>This is a page to add the Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
-            <p>Now Player(s) Online: <span id="playerCount">L0ADING</span>/30</p>
+            <p>Now Player(s) Online: <span id="playerCount">Loading</span>/30</p>
             <br>
             <button id="connect-button" onclick="openMinecraft()">Add Server</button>
             <button id="cmgmmodis">Join Discord</button>
