--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -2,243 +2,8 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connection CMGMMO</title>
-    <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" href="./cmg.png">
-    <script src="../../script.js"></script>
-    <style>
-        body {
-            background-color: #333232;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background-color: #2e2d2d;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #e0dede;
-            margin-top: 0;
-            transition: color, transform 0.1s ease;
-        }
-
-        h2:hover {
-            color: #fcffa0;
-            margin-top: 0;
-            transform: scale(1.05);
-        }
-
-        p {
-            color: #e0dede;
-            margin: 10px 0;
-        }
-
-        @keyframes pop {
-
-            0%,
-            100% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.1);
-            }
-        }
-
-        #playerCount {
-            color: #189618;
-            font-weight: bold;
-            animation: pop 1s infinite;
-        }
-
-
-        #yellow {
-            color: #ffee6f;
-            font-weight: bold;
-        }
-
-        button {
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .server-details {
-            color: #555;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            margin-top: 20px;
-            background-color: #5c5b5b;
-        }
-
-        .server-details h3 {
-            color: #f5f2f2;
-            margin-top: 0;
-            transition: color 0.15s ease;
-        }
-
-        .server-details h3:hover {
-            color: #ffff44;
-            margin-top: 0;
-        }
-
-        .server-details ul {
-            color: #bfbdbd;
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .server-details li {
-            color: #bfbdbd;
-            margin-bottom: 5px;
-        }
-
-        footer {
-            text-align: center;
-            background-color: #333232;
-            color: #f4f4f4;
-            padding: 10px 0;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .fade-in {
-            animation: fade-in 1s ease-in-out;
-        }
-
-        @keyframes fade-in {
-            0% {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .rotate {
-            animation: rotate 1s linear infinite;
-        }
-
-        @keyframes rotate {
-            0% {
-                transform: rotate(0);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
-    <script>
-        function fetchPlayerCount() {
-            const playerCountElement = document.getElementById('playerCount');
-
-            const displayPlayerCountWithDelay = (count, delay) => {
-                setTimeout(() => {
-                    playerCountElement.textContent = count;
-                }, delay);
-            };
-
-            const apiUrl = "https://api.mcsrvstat.us/bedrock/3/cmgmmo.mc.in.th:21356";
-
-            fetch(apiUrl)
-                .then(response => response.json())
-                .then(data => {
-                    if (data.players) {
-                        const onlinePlayers = data.players.online;
-
-                        displayPlayerCountWithDelay("Loading", 100);
-                        displayPlayerCountWithDelay("Loading.", 256);
-                        displayPlayerCountWithDelay("Loading..", 425);
-                        displayPlayerCountWithDelay("Loading...", 674);
-                        for (let i = 0; i < onlinePlayers + 1; i++) {
-                            displayPlayerCountWithDelay(`${i} (${onlinePlayers})`, 1235 + i * 500);
-                        }
-                        displayPlayerCountWithDelay(`${i}`, 0);
-                    }
-                })
-                .catch(error => {
-                    console.error('Error fetching player count:', error);
-                });
-        }
-
-        window.addEventListener('load', fetchPlayerCount);
-
-        function openMinecraft() {
-            const userAgent = navigator.userAgent.toLowerCase();
-            const isIOS = /iphone|ipad|ipod/.test(userAgent);
-
-            const instructions = document.getElementById('instructions');
-            const button = document.getElementById('connect-button');
-
-            if (isIOS) {
-                instructions.innerHTML = `
-            <p>Sorry, now you are using iOS so I can't add the server automatically.
-            Please add the server manually.</p>
-        `;
-            } else {
-                window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO|cmgmmo.mc.in.th:21356';
-                instructions.innerHTML = `
-            <p>Look like you didn't teleport to Minecraft?</p>
-            <p>Please add the server manually.</p>
-        `;
-            }
-            instructions.classList.add('fade-in');
-            button.classList.add('rotate');
-        }
-    </script>
+    <title>CMGMMO Server!</title>
+    <meta http-equiv="refresh" content="0;url=https://cmgmmo.github.io/Server/">
 </head>
-
-<body>
-    <main>
-        <div class="container">
-            <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
-            <h2>@CMGMMO!</h2>
-            <p>This is a page to add the Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
-            <p>Now Player(s) Online: <span id="playerCount">Loading</span>/30</p>
-            <br>
-            <button id="connect-button" onclick="openMinecraft()">Add Server</button>
-            <button id="cmgmmodis">Join Discord</button>
-            <button id="back">Back..</button>
-            <br>
-            <div class="server-details">
-                <h3>Server Details:</h3>
-                <ul>
-                    <li><strong>Server Name:</strong> CMGMMO Server</li>
-                    <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
-                    <li><strong>Port:</strong> 21356</li>
-                </ul>
-            </div>
-            <div id="instructions"></div>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; CMGMMO. All rights reserved.</p>
-    </footer>
-</body>
 
 </html>
