--- a/givegen/index.html
+++ b/givegen/index.html
@@ -22,7 +22,7 @@
 
         <div class="form-group">
             <label for="id">Item Id:</label>
-            <input type="text" id="id" placeholder="Item Id" value="0">
+            <input type="number" id="id" placeholder="Item Id" value="0">
         </div>
 
         <div class="form-group">
