--- a/givegen/index.html
+++ b/givegen/index.html
@@ -6,6 +6,108 @@
     <title>Minecraft Bedrock Give Command Generator</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="icon" href="./icon.png" type="image/png">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #222;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin: 20px 0;
+        }
+
+        .form-group {
+            margin: 10px 0;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        input[type="number"] {
+            width: 100%;
+            padding: 5px;
+            border: 1px solid #444;
+            border-radius: 5px;
+            background-color: #333;
+            color: #fff;
+            margin-top: 5px;
+        }
+
+        .input-container {
+            display: flex;
+            align-items: center;
+        }
+
+        .input-field {
+            flex: 1;
+            padding: 5px;
+            border: 1px solid #444;
+            border-radius: 5px;
+            background-color: #333;
+            color: #fff;
+        }
+
+        .add-button {
+            margin-left: 10px;
+            padding: 5px 10px;
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .add-button:hover {
+            background-color: #2980b9;
+        }
+
+        .list-container {
+            margin: 10px 0;
+        }
+
+        button[type="button"] {
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button[type="button"]:hover {
+            background-color: #2980b9;
+        }
+
+        textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #444;
+            border-radius: 5px;
+            background-color: #333;
+            color: #fff;
+            resize: none;
+            margin-top: 10px;
+        }
+
+        @media (max-width: 600px) {
+            input[type="text"],
+            input[type="number"],
+            .input-field {
+                font-size: 14px;
+            }
+
+            button[type="button"] {
+                font-size: 14px;
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Minecraft Bedrock Give Command Generator</h1>
@@ -32,20 +134,20 @@
 
         <div class="form-group">
             <label for="canPlace">Can Place On:</label>
-            <div id="canPlaceContainer">
-                <input type="text" id="canPlace" placeholder="Block Type">
-                <button type="button" id="canPlaceAddButton">Add</button>
+            <div class="input-container">
+                <input type="text" id="canPlace" placeholder="Block Type" class="input-field">
+                <button type="button" id="canPlaceAddButton" class="add-button">Add</button>
             </div>
-            <div id="canPlaceList"></div>
+            <div id="canPlaceList" class="list-container"></div>
         </div>
 
         <div class="form-group">
             <label for="canDestroy">Can Destroy:</label>
-            <div id="canDestroyContainer">
-                <input type="text" id="canDestroy" placeholder="Block Type">
-                <button type="button" id="canDestroyAddButton">Add</button>
+            <div class="input-container">
+                <input type="text" id="canDestroy" placeholder="Block Type" class="input-field">
+                <button type="button" id="canDestroyAddButton" class="add-button">Add</button>
             </div>
-            <div id="canDestroyList"></div>
+            <div id="canDestroyList" class="list-container"></div>
         </div>
 
         <button type="button" id="generateCommandButton">Generate Command</button>
