--- a/givegen/index.html
+++ b/givegen/index.html
@@ -151,6 +151,7 @@
         </div>
 
         <button type="button" id="generateCommandButton">Generate Command</button>
+        <p>Generate Button is now useless because it automatic now, but I keep it because it very very cool ;)</p>
 
         <textarea id="commandOutput" rows="5" cols="50" readonly></textarea>
 
