--- a/givegen/index.html
+++ b/givegen/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="icon" href="./icon.png" type="image/png">
     <style>
+        p {
+         font-size: 1;
+         margin: 20px 0;
+}
         body {
             font-family: Arial, sans-serif;
             background-color: #222;
