--- a/givegen/index.html
+++ b/givegen/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta property="og:title" content="@InwAitJi • Bedrock Give Item">
+    <meta property="og:description" content="Minecraft Bedrock GiveItem (CanDestroy/CanPlaceOn) • only available Bedrock Edition">
+    <meta property="og:image"
+        content="https://media.discordapp.net/attachments/967680143617302548/1170602167825088612/3_20231026134619.png?ex=6559a339&is=65472e39&hm=393893fa434760df9a4c340baf4d58f35fd867c309483fe7a62847fc9cb0fbe2&">
+    <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft Bedrock Give Command Generator</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="icon" href="./icon.png" type="image/png">
+    <link rel="icon" href="https://media.discordapp.net/attachments/967680143617302548/1170602167825088612/3_20231026134619.png?ex=6559a339&is=65472e39&hm=393893fa434760df9a4c340baf4d58f35fd867c309483fe7a62847fc9cb0fbe2&" type="image/png">
     <style>
         p {
          font-size: 1;
