--- a/tellraw/index.html
+++ b/tellraw/index.html
@@ -2,12 +2,18 @@
 <html>
 
 <head>
+    <meta property="og:title" content="@InwAitJi • Bedrock Tellraw">
+    <meta property="og:description" content="Minecraft Bedrock Tellraw Generator • only available Bedrock Edition">
+    <meta property="og:image"
+        content="https://media.discordapp.net/attachments/967680143617302548/1171447335411261551/AitJi.png?ex=655cb659&is=654a4159&hm=0f6c2a49fe96b15a4d9900c98bce6ace9a7d95340a49a33658257f2f7720a4b6&=&width=252&height=252">
+    <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=2">
+    <link rel="icon" href="https://media.discordapp.net/attachments/967680143617302548/1171447335411261551/AitJi.png?ex=655cb659&is=654a4159&hm=0f6c2a49fe96b15a4d9900c98bce6ace9a7d95340a49a33658257f2f7720a4b6&=&width=252&height=252" type="image/png">
     <title>InwAitJi • Minecraft Bedrock Tellraw Generator</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
