--- a/tellraw/index.html
+++ b/tellraw/index.html
@@ -30,6 +30,14 @@
             font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
         }
 
+        h3 {
+            color: #000000;
+        }
+
+        label {
+            color: #000000;
+        }
+
         body {
             background-color: #2c3e50;
             color: #fff;
