--- a/tellraw/index.html
+++ b/tellraw/index.html
@@ -34,6 +34,10 @@
             color: #000000;
         }
 
+        h4 {
+            color: #FFFFFF;
+        }
+
         label {
             color: #000000;
         }
@@ -254,7 +258,7 @@
         <button onclick="openPopup()">Add Component</button>
         <br>
         <div id="command">
-            <h3>Tellraw Command:</h3>
+            <h4>Tellraw Command:</h4>
             <textarea id="tellrawCommand" readonly></textarea>
         </div>
 
