--- a/tellraw/index.html
+++ b/tellraw/index.html
@@ -153,6 +153,8 @@
         }
 
         textarea {
+            padding: 10px;
+            max-width: 90%;
             margin-top: 5px;
             margin-left: 0px;
             width: 350px;
