--- a/givegen/index.html
+++ b/givegen/index.html
@@ -81,7 +81,7 @@
             margin: 10px 0;
         }
 
-        button[type="button"] {
+        button {
             padding: 10px 20px;
             background-color: #3498db;
             color: #fff;
@@ -90,7 +90,7 @@
             cursor: pointer;
         }
 
-        button[type="button"]:hover {
+        button:hover {
             background-color: #2980b9;
         }
 
