--- a/tellraw/index.html
+++ b/tellraw/index.html
@@ -104,6 +104,11 @@
             z-index: 2;
         }
 
+        input {
+           background-color: #000000;
+           color: #fff;
+        }
+
         .dark-mode-toggle:hover,
         .dark-mode .dark-mode-toggle:hover {
             background-color: #fff;
