--- a/tellraw/index.html
+++ b/tellraw/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta http-equiv="refresh" content="0;url=https://mcbe.vercel.app/tellraw">
     <meta property="og:title" content="@InwAitJi • Bedrock Tellraw">
     <meta property="og:description" content="Minecraft Bedrock Tellraw Generator • only available Bedrock Edition">
     <meta property="og:image"
