--- a/givegen/index.html
+++ b/givegen/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="refresh" content="0;url=https://mcbe.vercel.app/givegen">
     <meta property="og:title" content="@InwAitJi • Bedrock Give Item">
     <meta property="og:description" content="Minecraft Bedrock GiveItem (CanDestroy/CanPlaceOn) • only available Bedrock Edition">
     <meta property="og:image"
